Closer spacing of Fixed Action Buttons

--- a/vinoteca/front_end/vinoteca-style.sass
+++ b/vinoteca/front_end/vinoteca-style.sass
@@ -306,3 +306,7 @@ th
 .card-image img
   max-height: 100%
   max-width: 100%
+
+// Floating action button tweaks
+.fixed-action-btn.direction-left ul li
+  margin-right: 7.5px
